# macfanctl

./: .gitignore  LICENSE  README.md  README.zh-CN.md  pyproject.toml
docs/: NODE_CREDIT_PRIMITIVE.md  OPENCLAW_CAPABILITY_BILLING_GATEWAY.md  PRODUCTIVE_UPKEEP_MANIFESTO.md
macfanctl/: cli.py
